# mamar

./: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .vercelignore  Cargo.toml  TODO  building.md  changelog.md  flake.nix  license  package.json  readme.md  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: preview.yml  release.yml  rust.yml  test.yml
client/project64/: mamar.js  readme.md
codec/: Cargo.toml  readme.md
codec/src/: cmd.rs  de.rs  en.rs  lib.rs  rw_util.rs
codec/src/bgm/: cmd.rs  de.rs  en.rs  mod.rs
codec/src/sbn/: de.rs  en.rs  mod.rs
codec/src/snapshots/: .gitattributes  .gitignore
codec/tests/: matching.rs  readme.md
cursed_global_ref/: Cargo.toml
cursed_global_ref/src/: lib.rs
editor/: .gitignore  Cargo.toml  install_ci.sh  package-lock.json  package.json  postcss.config.js  readme.md  webpack.config.js
editor/src/: entry.js  file.js  file.rs  fs.rs  index.ejs  index.js  lib.css  lib.rs  read_agnostic.rs
editor/src/electron/: hot_server.js  hot_server.rs  mod.js  mod.rs  platform.js  process.rs  window.js  window.rs
editor/src/elements/: a.css  button-group.css  button.css  mod.rs  titlebar.css  titlebar.rs  x-popup.css
editor/src/fs/: bgm_like.rs  file.rs  mod.rs
editor/src/icon/: readme.md
editor/src/midi/: mod.rs  smf_to_bgm.rs
editor/src/os/: detect_os_electron.js  detect_os_web.js  mod.rs
editor/src/ui/: app.rs  mod.rs  status_bar.rs  title_bar.css  title_bar.rs
editor/src/ui/action/: accelerator.rs  mod.rs
editor/src/ui/css/: align.rs  color.css  color.rs  mod.rs  pad.rs
editor/src/ui/layout/: center.rs  grow.css  grow.rs  mod.rs  stack.css  stack.rs  text.css  text.rs
editor/src/ui/menu/: electron.js  electron.rs  menu_btn.css  menu_btn.rs  menu_item.css  menu_item.rs  mod.rs  web.js  web.rs
editor/static/: index.html
electron/: electron-builder.yml  main.js  package-lock.json  package.json
imui/: Cargo.toml
imui/examples/: hello.rs
imui/src/: input.rs  key.rs  layout.rs  lib.rs  render.rs
imui_glium/: Cargo.toml
imui_glium/examples/: hello.rs
imui_glium/src/: atlas.rs  font.rs  lib.rs  shader.frag  shader.vert
mamar/: Cargo.toml  build.rs
mamar-wasm-bridge/: Cargo.toml
mamar-wasm-bridge/pkg/: package.json
mamar-wasm-bridge/src/: lib.rs  piano_roll.rs
mamar-web/: .gitignore  .parcelrc  TODO  package.json  tsconfig.json  vite.config.ts
mamar-web/scripts/: wasm-watch.js
mamar-web/src/: DocTabs.tsx  index.html  index.scss  manifest.json  service-worker-load.js  service-worker.js  special-imports.d.ts  store.tsx
mamar-web/src/app/: App.module.scss  App.tsx  BgmFromSbnPicker.tsx  DocTabs.scss  DocTabs.tsx  ErrorBoundaryView.tsx  InstrumentInput.module.scss  InstrumentInput.tsx  Main.tsx  NoteInput.module.scss  NoteInput.tsx  StringInput.module.scss  StringInput.tsx  TempBridgeTest.tsx  VerticalDragNumberInput.module.scss  VerticalDragNumberInput.tsx  WelcomeScreen.tsx  analytics.ts  bridge.ts  index.html  index.tsx  instruments.ts  special-imports.d.ts  store.tsx
mamar-web/src/app/doc/: ActiveDoc.module.scss  ActiveDoc.tsx  PianoRoll.tsx  Playhead.module.scss  Playhead.tsx  Ruler.module.scss  Ruler.tsx  SegmentMap.module.scss  SegmentMap.tsx  SegmentsMap.module.scss  SegmentsMap.tsx  Sequencer.module.scss  Sequencer.tsx  SubsegDetails.module.scss  SubsegDetails.tsx  TimeGrid.tsx  TimeProvider.tsx  Tracker.module.scss  Tracker.tsx  VariationPicker.tsx  VariationSelect.tsx  VariationsMap.module.scss  VariationsMap.tsx  timectx.ts
mamar-web/src/app/emu/: PaperMarioRomInputDialog.tsx  PlaybackControls.module.scss  PlaybackControls.scss  PlaybackControls.tsx  TrackControls.module.scss  TrackControls.tsx
mamar-web/src/app/header/: BgmActionGroup.tsx  Header.scss  Header.tsx  OpenButton.tsx  SponsorButton.module.scss  SponsorButton.tsx
mamar-web/src/app/icon/: LoadingSpinner.tsx
mamar-web/src/app/sbn/: BgmFromSbnPicker.scss  BgmFromSbnPicker.tsx  songNames.json  useDecodedSbn.ts  worker.ts
mamar-web/src/app/store/: bgm.ts  dispatch.ts  doc.ts  index.ts  root.ts  segment.ts  variation.ts
mamar-web/src/app/util/: DramView.ts  Patcher.ts
mamar-web/src/app/util/hooks/: useDragToScroll.tsx  useMupen.ts  useMupen.tsx  useSize.ts  (+3 more)
mamar-web/src/emu/: PaperMarioRomInput.tsx
mamar-web/src/header/: Header.tsx
mamar-web/src/util/hooks/: useWasmBridge.ts
mamar/src/: display.rs  history.rs  lib.rs  logger.rs  main.rs  midi.rs  ui.rs
mamar/src/bgm/: en.rs  mod.rs
mamar/src/display/: draw.rs  entity.rs  icon.rs  input.rs  mod.rs
mamar/src/display/draw/geometry/: multicolor.frag  multicolor.vert
mamar/src/display/geo/: mod.rs  multicolor.vert
mamar/src/display/shaders/: texture.vert
mamar/src/interface/: form.rs  hot.rs  icon.rs  mod.rs  state.rs
mamar/src/interface/state/: track_list.rs
mamar/src/sbn/: en.rs  mod.rs
mamar/src/ui/: btn.rs  layout.rs  shape.rs  song.rs  text.rs
mamar/src/util/: math.rs  mod.rs
mamar/tests/: matching.rs
n64crc/: Makefile  n64crc.c  test.html
patches/: build.py  package.json  test.js
patches/src/: patches.c  patches.ld  symbol_addrs.txt
pm64/: Cargo.toml
pm64-typegen/: .gitignore  Cargo.toml  package.json
pm64-typegen/src/: main.rs
pm64/src/: hot.rs  id.rs  lib.rs  main.rs  rw.rs
pm64/src/bgm/: cmd.rs  de.rs  en.rs  mamar.rs  midi.rs  mod.rs  voice.rs
pm64/src/sbn/: mod.rs
pm64/tests/: matching.rs
pmbgm/: Cargo.toml
pmbgm/src/: hot_reload_server.rs  lib.rs  rw_util.rs
pmbgm/src/bgm/: cmd.rs  de.rs  en.rs  mod.rs
pmbgm/src/sbn/: mod.rs
pmbgm/tests/: matching.rs
src/: bgm.rs  display.rs  history.rs  hot.rs  lib.rs  logger.rs  main.rs  midi.rs  sbn.rs  ui.rs  util.rs
src/bgm/: cmd.rs  de.rs  en.rs  mod.rs
src/display/: draw.rs  entity.rs  input.rs  mod.rs
src/display/draw/: color.rs  entity.rs  geometry.rs  math.rs
src/display/draw/geometry/: multicolor.rs
src/display/geo/: multicolor.rs
src/display/shaders/: texture.frag
src/sbn/: de.rs
src/ui/: btn.rs  layout.rs  shape.rs  song.rs  text.rs
src/util/: color.rs  math.rs  mod.rs  rw.rs
tests/: matching.rs
