[workspace]
members = [
    "editor",
    "codec",
]

[profile.release]
lto = true
codegen-units = 1 # slow compile, but makes more optimisations possible
opt-level = "s" # optimise for code size
panic = "abort"
debug = true # needed for wasm-snip, stripped in production

[profile.dev]
incremental = true
