[workspace]
members = [
    "pmbgm",
    "cursed_global_ref",
    "mamar",
]

[profile.release]
lto = true
codegen-units = 1 # slow compile, but makes more optimisations possible
opt-level = 3 # could also use "s" to optimise for code size
panic = "abort"

[profile.dev]
incremental = true

[profile.dev.package.'*']
opt-level = 3
