[package]
name = "codec"
version = "0.1.0"
authors = ["Alex Bates <hi@imalex.xyz>"]
edition = "2018"
repository = "https://github.com/nanaian/mamar"
license = "0BSD"

[dependencies]
smallvec = { version = "1.5.0", features = ["write"] }
by_address = "1.0.4"
log = "0.4"

[dev-dependencies]
simple_logger = "1.11.0"
