[package]
name = "editor"
version = "0.1.0"
authors = ["Alex Bates <hi@imalex.xyz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wee_alloc = { version = "0.4", optional = true } # slower but much smaller
console_error_panic_hook = "0.1"
log = "0.4"
console_log = { version = "0.2", features = ["color"] }
yew = "0.17"
lazy_static = "1.4"
codec = { path = "../codec" }
