[package]
name = "editor"
version = "0.1.0"
authors = ["Alex Bates <hi@imalex.xyz>"]
edition = "2018"

[features]
electron = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.68"
wasm-bindgen-futures = "0.4.18"
js-sys = "0.3.45"
web-sys = { version = "0.3.45", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true } # slower but much smaller
console_error_panic_hook = "0.1.6"
log = "0.4.11"
console_log = { version = "0.2.0", features = ["color"] }
yew = "0.17.4"
lazy_static = "1.4.0"
pmbgm = { path = "../pmbgm" }
anyhow = "1.0.34"
midly = { version = "0.5.1", default_features = false, features = ["std", "alloc"] }
yew-octicons = "0.1.1"
yewtil = "0.3.2"
gloo-events = "0.1.1"
cursed_global_ref = { path = "../cursed_global_ref" }
