[package]
name = "mamar-wasm-bridge"
version = "0.1.0"
authors = ["Alex Bates <alex@bates64.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
serde ={ version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }

pm64 = { path = "../pm64", features = ["midly"] }

[dependencies.web-sys]
features = ['CanvasRenderingContext2d']
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
