[package]
name = "mamar"
version = "0.3.0"
authors = ["Alex Bates <hi@imalex.xyz>"]
edition = "2018"

[dependencies]
imui_glium = { path = "../imui_glium" }
glium = "0.29"
lyon = "0.17"
euclid = "0.22"
lru = "0.6"
lazy_static = "1"
smallvec = { version = "1.5.0", features = ["write"] } # TODO: remove
image = "0.23"
ttf-parser = "0.9"
tinyfiledialogs = "3.0"
log = "0.4.14"
midly = "0.5.1"
id-arena = "2.2.1"
rayon = "1.5.0"
cached = { version = "0.23", default-features = false }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellscalingapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Mamar" # windows uses this as the taskbar name for some reason
