[package]
name = "mamar"
version = "0.8.1"
authors = ["Alex Bates <hi@imalex.xyz>"]
edition = "2018"

[dependencies]
imui_glium = { path = "../imui_glium" }
pm64 = { path = "../pm64", features = ["midly"] }
tinyfiledialogs = "3.0"
log = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellscalingapi"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
FileDescription = "Mamar" # windows uses this as the taskbar name for some reason
